# FIAP-Tech-Challenge-Big-Data-Architecture

./: .gitignore  README.md  env_example.txt  pyproject.toml  requirements.txt
docs/: ETL_glue_pregao_B3.json
terraform_arq/: main.tf  variables.tf
terraform_arq/src/: scraping_b3.py  scrapping_b3.py  trigger_glue.py
