[project]
name = "fiap-tech-challenge-big-data-architecture"
version = "0.1.0"
description = "Projeto de entrega da fase 2 da pós graduação em Machine Learning Engineering na FIAP."
authors = [
    {name = "KevinOFL",email = "kevinsilvaofl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.39.12,<2.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=6.0.0,<7.0.0)",
    "html5lib (>=1.1,<2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
